package service

import (
	"context"
	pb "github.com/arsaljamal/super-app/protobufs/services/user-service/api/v1"
)

// AuthenticationService Define an interface for the service
type AuthenticationService interface {
	Login(ctx context.Context, in *pb.LoginRequest) (*pb.LoginResponse, error)
	Logout(ctx context.Context, in *pb.LogoutRequest) (*pb.LogoutResponse, error)
	Status(ctx context.Context, in *pb.SessionRequest) (*pb.SessionResponse, error)
}

// AuthenticationServiceImpl Define a struct for the service implementation
type AuthenticationServiceImpl struct {
	// ... any additional fields you need for your implementation

	// UnimplementedAuthenticationServiceServer must be embedded to have forward compatible implementations.
	pb.UnimplementedAuthenticationServiceServer
}

// NewAuthenticationServiceInstance Create a new instance method for creating service instances
func NewAuthenticationServiceInstance() AuthenticationService {
	return &AuthenticationServiceImpl{
		// ... any additional initialization you need
	}
}

func (s *AuthenticationServiceImpl) Login(ctx context.Context, in *pb.LoginRequest) (*pb.LoginResponse, error) {
	// Implement your login logic here
	// ...
	return &pb.LoginResponse{Jwt: "your_jwt_token"}, nil
}

func (s *AuthenticationServiceImpl) Logout(ctx context.Context, in *pb.LogoutRequest) (*pb.LogoutResponse, error) {
	// Implement your logout logic here
	// ...
	return &pb.LogoutResponse{Success: true}, nil
}

func (s *AuthenticationServiceImpl) Status(ctx context.Context, in *pb.SessionRequest) (*pb.SessionResponse, error) {
	// Implement your session check logic here
	// ...
	return &pb.SessionResponse{Valid: true, Username: "username"}, nil
}
